Increase the default disk size from 512M to 768M, as 512M is
no longer sufficient for amd64.

- 1.20 released -

Run df before and after the ATF tests so that disk usage data
can be gathered from the test logs.

Increase the default timeout for the ATF test from 1 hour to 2 hours
as the number of tests has now increased to a point where 1 hour is
not always enough even on a fast machine.

Increase the timeout for the set extraction phase from 1200 to 2400
seconds; the extra time is needed when installing a system built
without optimization.

- 1.19 released -

Rename the --qemu-args option to --vmm-args in preparation for adding
support for other virtual machine monitors in addition to qemu.

Fix typos found by Antti Kantee and Jean-Yves Migeon.

Deprecate the --qemu-args -no-kvm-irqchip workaround, as it doesn't
quite work.

Add support for MacOS X hosts, from Jeff Rizzo.

New command line option "--test-timeout".

Deal with yet another seemingly nondeterministic "Press enter to
continue" prompt.

- 1.18 released -

Deal with sysinst no longer asking for a password cipher.

Create the work directory in "test" mode so that it works without
running "install" first.

Fix incorrect description of the --workdir option in the man page, and
consistently use the term "work directory" throughout.

Reorganized the man page, adding a MODES section.

New mode "print-workdir".

Fix installation of historical versions of -current around
CVS date 2009.08.23.20.57.40.

- 1.17 released -

Fix bugs in the new features introduced in 1.16: the --sets option
only worked when passing the URL of a distribution directory (rather
than a pathname or the url of an ISO), and exporting of ATF output
only worked when using --workdir with an abolute pathname.

- 1.16 released -

Update the discussion of Linux KVM virtualization compatibility in the
BUGS section, noting the --qemu-args -no-kvm-irqchip workaround and
including a reference to PR 44069.

New command line option "--sets".
