@@ -1,5 +1,8 @@
-Increase the default disk size from 512M to 768M, as 512M is
-no longer sufficient for amd64.
+Disk images no longer contain holes, making them easier to use with
+vnd(4).
+
+Increase the default disk size from 512M to 768M, as 512M is no longer
+sufficient for amd64.
 
 - 1.20 released -
 
